feat: Refactor MoveVehicleDto to use Builder pattern and update RequestServiceImpl to utilize it